@@ -344,6 +344,9 @@ Release 2.1.0-beta - UNRELEASED
     of the entire Container in the startContainer call - YARN-684.
     (Vinod Kumar Vavilapalli via sseth)
 
+    MAPREDUCE-5220. Fix backward incompatibility for TaskCompletionEvent by
+    adding back setTaskID. (Zhijie Shen via acmurthy) 
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS
 
     MAPREDUCE-4739. Some MapReduce tests fail to find winutils.
